Fixed the first section images not being aligned correctly on phone version

--- a/styles/home2.css
+++ b/styles/home2.css
@@ -689,9 +689,9 @@ img {
         margin-top: 3rem;
     }
     /*--------Main -----------*/
+    
     .main .right {
         position: relative;
-        margin: 5% 10%;
     }
     .image-bottom {
         position: absolute;
@@ -700,7 +700,7 @@ img {
         left: 0;
         width: 90%;
         z-index: -1;
-        /* margin: auto; */
+        margin: auto;
         /* padding: 0 10%; */
     }
     .image-top {
